# cocoa

./: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: mod.rs
src-tauri/src/object/: mod.rs
src-tauri/src/proxy/: danmaku_proxy.rs  mod.rs  video_proxy.rs
src/api/: biliApi.ts  comment.json
src/app/: App.tsx  Login.tsx  pgcplayer.tsx  player.tsx
src/app/Main/: Layout.tsx
src/app/Main/History/: index.css  index.tsx
src/app/Main/Home/: index.tsx
src/app/Main/Settings/: index.tsx
src/app/Main/dynamic/: index.tsx
src/app/Main/favorite/: index.tsx
src/app/main/: layout.css  layout.tsx
src/components/: areatabs.css  areatabs.tsx  autoplay-carousel.tsx  autoplay_carousel.tsx  base64_bg.tsx  comment.tsx  css_img.tsx  image.tsx  infinite.tsx  level_selector.tsx  personal_letter.tsx  senddynamic.tsx  upinfo.tsx  videoinfo.tsx  videolist.tsx
src/components/dynamic/: block_list.tsx  chooseup.tsx  chooseupTab.tsx  chooseup_tab.tsx  dynamic_list.tsx  dynamic_type.tsx  is_live.tsx  personal_letter.tsx  send_dynamic.tsx  topic.tsx
src/components/home/: autoplay_carousel.tsx  videolist.tsx
src/components/icon/: comment.tsx  danmaku.tsx  dislike.tsx  forward.tsx  like.tsx  play.tsx  topic.tsx
src/components/tabsarea/: content.tsx  donghua.tsx  fanju.css  fanju.tsx  fanjuItem.tsx  index.tsx  ranking_list.tsx  slide.tsx  styles.css  tab.tsx  type_1.tsx  type_2.css  type_2.tsx  type_2_item.tsx
src/lib/: biliUtils.ts
src/routes/: index.tsx
src/store/: biliStore.tsx
src/type/: authentication.ts  bili.ts  block_list.ts  comment.ts  dynamic.ts  favorite.ts  history.ts  home.ts  login.ts  pgc.ts  settings.ts  toview.ts  user.ts  video.ts  video_stream.ts
(+20 files in other folders)
