[package]
name = "cocoa"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version= "0.11.27", features = ["cookies", "cookie_store", "json", "stream"] }
reqwest_cookie_store = "0.6.0"
base64 = "0.22.0"
toml = "0.8.10"
flate2 = "1.0.28"
warp = "0.3.7"
tokio = { version = "1.37.0", features = ["full"] }
urlencoding = "2.1.3"
futures-util = "0.3.30"
actix-web = "4.1.0"
actix-rt = "2.7.0"
scraper = "0.16.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
